# robot_video_server

./: CMakeLists.txt  README.md  package.xml
config/: camera_config.json  dds_config.json
include/: common_def.h  data_queue.hpp  depth_encoder.h  rtsp_server_wrapper.h  utils.hpp  video_capture.h  video_encoder.h  video_server_node.h
launch/: robot_video_server.launch.py
nvidia/include/: v4l2_nv_extensions.h
src/: depth_encoder.cpp  main.cpp  rtsp_server_wrapper.cpp  utils.cpp  video_capture.cpp  video_encoder.cpp  video_server_node.cpp
