<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_video_server</name>
  <version>0.0.0</version>
  <description>ROS 2 Robot RTSP Video Server</description>
  <maintainer email="hongyuan.liu@corenetic.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>robot_interface</depend>
  <depend>ament_index_cpp</depend> 
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
